# my_work

./: .stignore  333.txt  LICENSE  README.en.md  README.md  a.out  index.html  print_stack2.cpp  test2
c_test/: README.md  index.html
doc/: Stu_csv.csv
makefile_test2/: Makefile.in
makefile_test2/autom4te.cache/: output.2  traces.0  traces.1  traces.2
makefile_test2/src/: Makefile  Makefile.am
makefile_test2/src/debug/: Makefile.in
makefile_test2/src/test/: Makefile.am  header.cpp
my_env/: .bashrc  .tmux.conf  .vimrc  sshd_config  sync_to_gitee.py  vim_install.sh
my_env/apache2/sites-available/: 000-default.conf
my_note/: .vim.md.swp  docker.md  git.md  md_template.md  nfs.md  tmux.md  vim.md
pcap_output/: bfns.harlyn-port00.pcap  bfns.harlyn-port01.pcap  bfns.harlyn-port02.pcap
project/: p4_build.text
project/makefile_test/: Makefile  Makefile.am  config.h  config.status  configure  configure.ac  configure.scan  tags
project/makefile_test/autom4te.cache/: output.0  requests
project/makefile_test/src/: Makefile.in  tags  test.cpp
project/makefile_test/src/debug/: Makefile  Makefile.am  backtrace.c
project/makefile_test/src/include/: backtrace.c  header.h
project/makefile_test/src/test/: Makefile  Makefile.in
project/scrapy/my_scrapy/my_scrapy/: items.py  middlewares.py  pipelines.py  settings.py
project/scrapy/my_scrapy/pcap_output/: bfns.harlyn-port00.pcap  bfns.harlyn-port01.pcap  bfns.harlyn-port02.pcap  bfns.harlyn-port03.pcap  bfns.harlyn-port04.pcap  bfns.harlyn-port05.pcap  bfns.harlyn-port06.pcap  bfns.harlyn-port07.pcap
project/switch_p4/: switch.csv  switch_all.csv  switch_profile_a0.csv  switch_profile_b0.csv  switch_profile_l0.csv
project/switch_p4/doc/: .gitattributes
project/switch_p4/p4src/: Makefile  Makefile.am  Makefile.in  cscope.out
project/switch_p4/p4src/shared/: acl.p4  dtel.p4  headers.p4  meter.p4  nexthop.p4  parde.p4  port.p4  rewrite.p4  types.p4  validation.p4  wred.p4
project/switch_p4/p4src/switch/: bf-rt.json  manifest.json  switch.conf
project/switch_p4/p4src/switch-tofino/: README.md  features.p4  switch.p4  switch_tofino_a0.p4  switch_tofino_b0.p4  util.p4
project/switch_p4/p4src/switch-tofino2/: switch_tofino2_c0.p4  switch_tofino2_d0.p4  util.p4
project/switch_p4/p4src/switch/pipe/: switch.bfa  switch.dynhash.json  switch.prim.json
project/test/c_test/: a.out  addr2line_test.c  static_link.c  test.c
project/test/c_test/rpath/: a.c  a.h  b.c  hallo.c  libb.so.0  test  test.c
project/test/cpp/: a.out
project/test/cpp/backtrace/: README  a.out  a.out.debug  backtrace.cpp  backtrace.h
temp/: acl.p4  features.p4  l2.p4  l3.p4  multicast.p4  parde.p4  qos.p4  switch_profile_l0.p4  switch_tofino_a0.p4  table_sizes.p4  tunnel.p4  types.p4  validation.p4
test_mke/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  test  test.cpp
test_mke/.deps/: test.Po
test_mke/autom4te.cache/: output.0  requests  traces.0  traces.1
test_mke/tets/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  configure.scan
test_mke/tets/autom4te.cache/: output.0  requests  traces.0  traces.1
test_mke/tets/src/: Makefile  Makefile.am  Makefile.in  a.out  test  test.cpp
(+9 files in other folders)
